# python-taskgroup-ai-agent

./: .env.example  Dockerfile.backend  LICENSE  Makefile  README.md  REPO_DESCRIPTION.md  credentials.example.json  docker-compose.full.yml  docker-compose.yml  pyproject.toml
database/: init.sql  knowledge_data.py  setup_knowledge.py
docs/: OAUTH_SETUP.md
examples/: interview_demo.py  openai_agent.py  orchestrator_demo.py  rag_agent.py  service_dashboard.py  simple_agent.py
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/api/: client.ts
frontend/src/components/: NotificationToast.tsx  WebSocketProvider.tsx
frontend/src/hooks/: useApi.ts
frontend/src/routes/: __root.tsx  index.tsx  interviews.tsx  monitoring.tsx  services.tsx  tasks.tsx
frontend/src/stores/: atoms.ts
frontend/src/types/: api.ts  interview.ts
scripts/: dev-stack.sh  start-full-stack.sh  start_api.py  start_demo.py  stop-full-stack.sh
src/agent/: base.py  database.py  gmail_agent.py  google_calendar_agent.py  interview_orchestrator.py  llm_agent.py  smart_agent.py
src/api/: __init__.py  main.py
src/python_taskgroup_ai_agent/: __init__.py
src/services/: __init__.py  agent_services.py  base.py  interview_services.py  orchestrator.py  registry.py
tests/: test_agents.py
